plugins {
    id 'java'
    id 'application'
    id "io.freefair.lombok" version "8.10"
    id "com.github.johnrengelman.shadow" version "8.1.1"
}

group = 'com.github.mito99'
version = '1.0-SNAPSHOT'
mainClassName = 'com.github.mito99.javacallgraph.Main'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'info.picocli:picocli:4.7.6'
    implementation 'org.javassist:javassist:3.30.2-GA'
    implementation 'org.neo4j.driver:neo4j-java-driver:4.4.18'
    implementation 'io.github.cdimascio:dotenv-java:2.3.2'
    implementation 'commons-codec:commons-codec:1.17.1'
    implementation 'com.google.guava:guava:31.1-jre'
    
    implementation 'org.slf4j:slf4j-api:2.0.7'
    runtimeOnly 'org.slf4j:slf4j-simple:2.0.7'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.mockito:mockito-core:3.12.4'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'com.github.mito99.javacallgraph.Main'
}

startShadowScripts {
    doLast {
        def windowsScriptFile = file getWindowsScript()
        def unixScriptFile    = file getUnixScript()

        windowsScriptFile.text = windowsScriptFile.text.replace('%APP_HOME%\\lib', '%APP_HOME%\\libs')
        unixScriptFile.text = unixScriptFile.text.replace('$APP_HOME/lib', '$APP_HOME/libs')
    }
}